Add virtual threads and Java 20