@@ -1,4 +1,4 @@
-FROM openjdk:17-jdk-alpine
+FROM openjdk:20-slim
 
 WORKDIR /app
 
@@ -6,4 +6,4 @@ COPY ./target/rinhabackend2023-0.0.1-SNAPSHOT.jar ./rinha.jar
 
 EXPOSE 9999
 
-ENTRYPOINT [ "java", "-jar", "./rinha.jar" ]
+ENTRYPOINT [ "java", "--enable-preview", "-jar", "./rinha.jar" ]
